kubernetes/yamls/web/web-deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: eventyay/api-server:latest
        command: ["/bin/sh","-c"]
        args: ["./kubernetes/run.sh"]
        livenessProbe:
          httpGet:
            path: /health-check/
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
          - mountPath: /opev/open_event/static/uploads/
            name: nfs-storage
      restartPolicy: Always
      volumes:
        - name: nfs-storage
          persistentVolumeClaim:
            claimName: nfs-claim
