kubernetes/yamls/web/web-service.yml
kind: Service
apiVersion: v1
metadata:
  name: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: web
#  type: LoadBalancer
#  loadBalancerIP: '104.196.233.213'
