kubernetes/yamls/web/ingress-notls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-notls
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.staging.eventyay.com
    http:
      paths:
      - path: /
        backend:
          serviceName: redirector
          servicePort: 8080
  - host: staging.eventyay.com
    http:
      paths:
      - path: /
        backend:
          serviceName: redirector
          servicePort: 8080
