kubernetes/yamls/web/ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - eventyay.com
    - www.eventyay.com
    secretName: eventyay-tls
  rules:
  - host: www.eventyay.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
  - host: eventyay.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
